--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     tags:
       - "*"
   pull_request:
@@ -21,7 +21,7 @@ jobs:
       with:
         go-version: 1.23
     - name: Build
-      run: make
+      run: make build
 
   docs:
     runs-on: ubuntu-latest
@@ -36,41 +36,6 @@ jobs:
 #      run: |
 #        make gen-docs
 #        git diff --exit-code
-
-  linux:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23
-    - name: Build kg and kgctl for all Linux Architectures
-      run: make all-build
-
-  darwin:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23
-    - name: Build kgctl for Darwin amd64
-      run: make OS=darwin ARCH=amd64
-    - name: Build kgctl for Darwin arm64
-      run: make OS=darwin ARCH=arm64
-
-  windows:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23
-    - name: Build kgctl for Windows
-      run: make OS=windows
 
   unit:
     runs-on: ubuntu-latest
@@ -94,25 +59,15 @@ jobs:
     - name: Run e2e Tests
       run: make e2e
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23
-    - name: Lint Code
-      run: make lint
-
-  container:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23
-    - name: Container
-      run: make container
+  # https://github.com/castai/kilo/issues/12
+  #lint:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - uses: actions/checkout@v3
+  #  - name: Set up Go
+  #    uses: actions/setup-go@v4
+  #    with:
+  #      go-version: 1.23
+  #  - name: Lint Code
+  #    run: make lint
 
