--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -6,6 +6,9 @@ on:
       - master         # Trigger the workflow on push to the master branch
     tags:
       - 'v*'           # Trigger the workflow on tags like v1.0.0, v2.0.0, etc.
+  pull_request:
+    branches:
+      - master         # Trigger workflow when a PR targets the master branch
 
 permissions:
   contents: read
@@ -49,9 +52,12 @@ jobs:
         with:
           context: .
           push: true
-          # Tag the image as 'latest' for master branch and as the version tag for versioned pushes
+          # Tag the image as 'latest' only for master branch, versioned tags for versioned pushes, and PR-specific tags
           tags: |
+            # Version tags for releases
             ${{ steps.meta.outputs.tags }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${GITHUB_REF##*/}  # This will use the tag from the push
+            
+            # Commit SHA for PR builds for precise versioning
+            ${{ github.event_name == 'pull_request' && env.REGISTRY && env.IMAGE_NAME && format('{0}/{1}:{2}', env.REGISTRY, env.IMAGE_NAME, github.sha.substring(0, 7)) }}
+          
           labels: ${{ steps.meta.outputs.labels }}
